# sequencing-report-service

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  dummy.txt  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  merge_request_template.md
.github/workflows/: tests.yml
alembic/: alembic.ini  env.py
alembic/versions/: 10624d0381a6_create_jobs_table.py  3d88ffdab829_create_job_table.py  5fae4be42fbf_initial_models.py  6fae5fc69a17_initial_models.py  cb2de95ba237_adding_log_field.py  d0a6d945cf99_add_environment_to_job.py
config/: app.config
config/pipeline_config/: schema.json  seqreports.yml
docs/: Makefile  conf.py  index.rst  installation.rst
docs/autogenerate/: generate_route_docs.py
requirements/: dev  prod
sequencing_report_service/: __init__.py  app.py  exceptions.py  nextflow.py  playwithstuff.py
sequencing_report_service/handlers/: __init__.py  job_handler.py  reports_handler.py  version_handler.py
sequencing_report_service/models/: command.py  db_models.py
sequencing_report_service/repositiories/: job_repo.py  reports_repo.py  runfolder_repo.py
sequencing_report_service/services/: local_runner_service.py
tests/: conftest.py  test_integration.py  test_nextflow.py  test_sequencing_report_service.py  test_utils.py
tests/resources/reports/2019/: foo_runfolder
tests/unit/handlers/: test_job_handler.py
tests/unit/repositories/: test_job_repo.py
tests/unit/services/: test_local_runner_service.py
(+2 files in other folders)
